basically working if user doesn't mess up

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -25,3 +25,11 @@ html, head, body, div,a{
     width: 90%;
     height: 90%;
 }
+
+.grey{
+    background: lightgrey;
+}
+
+.yellow{
+    background: lightyellow;
+}
